--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,4 +1,7 @@
 body {
     background-image: url(../assets/flick2copy.gif);
     margin: auto;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
