--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,7 +1,23 @@
+@keyframes move {
+    from {background-image: url(../assets/flick2copy.gif);}
+    to {background-image: url(../assets/flickShadow2.png)}
+    }
+
 body {
     /* background-image: url(../assets/flick2copy.gif); */
+    animation: move 5s infinite;
+    animation-iteration-count: 1;
     margin: auto;
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+h1 {
+    position: absolute;
+    padding-top: 30vh;
+    font-size: 100px;
+    text-align: center;
+    width: 100%;
+
 }
