--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: ourFont;
-  src: url();
+  src: url(https://use.typekit.net/krt2bfx.css);
 }
 
 body {
-  background-image: url(./components/assets/flickShadow2.png);
+  background-image: url(./components/assets/flickPick2.png);
   margin: auto;
   height: 100vh;
   background-repeat: no-repeat;
