--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -22,5 +22,28 @@ h1 {
     font-size: 100px;
     text-align: center;
     width: 100%;
+}
 
+.searchIcon{
+    height: 40px;
+    cursor: pointer;
+}
+
+.home{
+    text-align: left;
+    margin: 10px;
+}
+
+.user li {
+    display: inline;
+    margin: 10px;
+    font-family: abril-titling-condensed, serif;
+    font-weight: 800;
+    font-style: italic;
+    font-size: 20px;
+    color: #fedfff;
+    text-align: center;
+    width: 100%;
+    cursor: pointer;
+    list-style-type: none;
 }
