--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -5,3 +5,8 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.searchIcon{
+    height: 40px;
+    cursor: pointer;
+}
