--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -24,7 +24,7 @@ body {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
@@ -65,6 +65,6 @@ font-style: italic;
  /*
 
 dark purple - #9123bf
-light purple - fedfff
+light purple - #fedfff
 
 */
