--- a/src/App.css
+++ b/src/App.css
@@ -3,17 +3,17 @@
   src: url(https://use.typekit.net/krt2bfx.css);
 }
 
-body {
+/* body {
   background-image: url(./components/assets/flickPick2.png);
   margin: auto;
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
-}
+} */
 
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
 /* .App-logo {
   height: 40vmin;
