--- a/src/components/home/login/loginDisplay/LoginDisplay.css
+++ b/src/components/home/login/loginDisplay/LoginDisplay.css
@@ -1,54 +1,35 @@
-/* input:invalid {
-    border: 2px solid black;
-    background-color: red;
 
+  .form-input-btn {
+    font-family: abril-titling-condensed, serif;
+    width: 80%;
+    height: 50px;
+    margin-top: 10px;
+    border-radius: 2px;
+    background: linear-gradient(
+      90deg,
+      #fedfff 0%,
+      #9123bf 100%
+    );
+    outline: none;
+    border: none;
+    color:black;
+    font-size: 1rem;
+  }
+  
+ .form-input-btn:hover {
+    cursor: pointer;
+    background: linear-gradient(
+      90deg,
+      #fffddf 0%,
+      rgb(126, 109, 122) 100%
+    );
+    transition: all 0.4s ease-out;
+  }
+  
+  
+.Signup{
+    font-family: abril-titling-condensed, serif;
     
+   
 }
-
-input:valid{
-    border: 2px solid black;
-}
-*/
-
  
-      
-      .form-input::placeholder {
-        color: #595959;
-        font-size: 12px;
-      }
-      
-      .form-input-btn {
-          
-        width: 80%;
-        height: 50px;
-        margin-top: 10px;
-        border-radius: 2px;
-        background: linear-gradient(
-          90deg,
-          rgb(59, 66, 70) 0%,
-          rgb(126, 109, 122) 100%
-        );
-        outline: none;
-        border: none;
-        color: #fff;
-        font-size: 1rem;
-      }
-      
-      .form-input-btn:hover {
-        cursor: pointer;
-        background: linear-gradient(
-          90deg,
-          rgb(211, 143, 255) 0%,
-          rgb(211, 73, 204) 100%
-        );
-        transition: all 0.4s ease-out;
-      }
-      
-      .form-input-login {
-        font-size: 0.8rem;
-        margin-top: 10px;
-        color: rgb(199, 36, 158);
-        width: 80%;
-        text-align: center;
-      }
-
