--- a/src/components/home/signup/Signup.css
+++ b/src/components/home/signup/Signup.css
@@ -1,8 +1,4 @@
-.form-input::placeholder {
-    color: #595959;
-    font-size: 12px;
-  }
-  
+
   .form-input-btn {
     font-family: abril-titling-condensed, serif;
     width: 80%;
@@ -11,40 +7,30 @@
     border-radius: 2px;
     background: linear-gradient(
       90deg,
-      rgb(59, 66, 70) 0%,
-      rgb(126, 109, 122) 100%
+      #fedfff 0%,
+      #9123bf 100%
     );
     outline: none;
     border: none;
-    color: #fff;
+    color:black;
     font-size: 1rem;
   }
   
-  .form-input-btn:hover {
+ .form-input-btn:hover {
     cursor: pointer;
     background: linear-gradient(
       90deg,
-      rgb(211, 143, 255) 0%,
-      rgb(211, 73, 204) 100%
+      #fffddf 0%,
+      rgb(126, 109, 122) 100%
     );
     transition: all 0.4s ease-out;
   }
   
-  .form-input-login {
-    font-size: 0.8rem;
-    margin-top: 10px;
-    color: rgb(199, 36, 158);
-    width: 80%;
-    text-align: center;
-  }
   
 .Signup{
     font-family: abril-titling-condensed, serif;
+    
    
 }
-
-
-
-
-
+ 
 
