--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,14 @@
   src: url(https://use.typekit.net/krt2bfx.css);
 }
 
-/* body {
+body {
   background-image: url(./components/assets/flickPick2.png);
   margin: auto;
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
-} */
+  overflow: hidden;
+}
 
 /* .App {
   text-align: center;
